--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -125,13 +125,13 @@ li a{
 }}
 
 @media screen and (max-width: 550px){
-    #portrait {
+    .cardimg {
     width: 50%;
     margin: 0 auto;
 }}
 
 @media screen and (min-width: 550px){
-    #portrait img{
+    .cardimg img{
         display: block;
         float: right;
         width: 200px;
@@ -183,6 +183,7 @@ canvas {
 img.centered {
     display: block;
     margin: 20px auto;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 1550px) {
